1、修改BUG 2、增加断言 3、websocket修改 4、COPY修改 5、mongo分页 6、JPA增加配置